[package]
name = "ttf-parser-utils"
version = "0.1.1"
edition = "2021"
authors = ["Christer Sandberg <chrsan@gmail.com>", "TimTheBig"]
keywords = ["ttf", "truetype", "otf", "opentype", "font"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimTheBig/ttf-utils"
description = "A crate with embolden, slant, and modify bbox utils for ttf-parser"
readme = "README.md"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ttf-parser = { version = "0.25", default-features = true }

[dev-dependencies]
structopt = "0.3"
